more letter spacing fixes

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -245,3 +245,11 @@ div.form-container {
 app-root .mat-mdc-form-field-input-control.mat-mdc-form-field-input-control {
     letter-spacing: 0;
 }
+
+app-root .nav-caption {
+    letter-spacing: 0;
+}
+
+app-root .mat-body {
+    letter-spacing: 0;
+}
